# StellarTrace

./: CMakeLists.txt  Jsonnormalization.cpp  Key  Key.pub  README.md  autocomplete.py  main.cpp  package-lock.json  package.json  sample_semantic.py  test.json
Barrels/: barrel_0.txt  barrel_1.txt  barrel_2.txt  barrel_3.txt  barrel_4.txt  barrel_5.txt
Samplefiles/: AUC.csv  ForwardIndex.txt  InvertedIndex.txt  Lexicon (test).txt  test.csv  test.json
UI/: REVIEW.md  index.html  search.js
include/: Autocomplete.hpp  DynamicIndexer.hpp  ForwardIndex.hpp  InvertedIndex.hpp  Lexicon.hpp  Lexiconfolder.hpp  SearchEngine.hpp  astronomicalunitc.hpp  barrels.hpp  json.hpp  semanticsearch.hpp
stellar-trace-frontend/src/components/: AddDocument.jsx  Observatory.jsx  OrbitalView.jsx
stellar-trace-frontend/src/utils/: useAutocomplete.js
stellar-trace/src/: App.css  App.jsx  index.css
stellar-trace/src/components/: Observatory.jsx  OrbitalView.jsx
